--- a/package.json
+++ b/package.json
@@ -7,18 +7,38 @@
     "test": "jest"
   },
   "dependencies": {
-    "prop-types": "^15.6.2",
     "react": "16.4.1",
-    "react-native": "0.56.0",
-    "react-native-camera": "^1.1.4"
+    "react-native": "0.56.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.0",
+    "@types/react": "^16.4.6",
+    "@types/react-native": "^0.56.3",
+    "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "^5",
     "jest": "23.4.1",
-    "react-test-renderer": "16.4.1"
+    "react-native-typescript-transformer": "^1.2.10",
+    "react-test-renderer": "16.4.1",
+    "ts-jest": "^23.0.1",
+    "typescript": "^2.9.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
