update code to use TypeScript

--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-camera": "1.1.4"
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
     "@types/react": "^16.4.6",
-    "@types/react-native": "^0.56.3",
+    "@types/react-native": "^0.56.2",
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "^5",
     "jest": "23.4.1",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.4.1",
-    "ts-jest": "^23.0.1",
+    "ts-jest": "^23.0.0",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^2.9.2"
   },
   "jest": {
@@ -29,16 +32,7 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "modulePaths": [
-      "<rootDir>"
-    ]
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "modulePaths": ["<rootDir>"]
   }
 }
