--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,10 +7,9 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
-        google()
+        google() // add this
     }
     dependencies {
-        // classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.android.tools.build:gradle:3.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,7 +20,7 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
-        google()
+        google() // add this
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
